--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 <body>
 
   <script
-    src="https://smart-banner-api.af-ibbf55.com/affijet/smart-banners/ib/affi-smart-banners.js?uid=b718bad1-8454-4582-9e20-196b25eadea2">
-  </script>
-
+    src="https://smart-banner-api.af-pb06e2.com/affijet/smart-banners/pb/affi-smart-banners.js?uid=1b6cdaf5-05e5-4d73-9173-ee7f63825a81">
 </body>
 </html>
